[package]
name = "rust-roveri"
version = "0.1.0"
edition = "2021"

[dependencies]
wg_2024 = { git = "https://github.com/WGL-2024/WGL_repo_2024.git", features = ["serialize", "debug"] }
crossbeam-channel = "0.5.13"
bit-set = "0.8.0"
rand = "0.8.5"
log = "0.4.22"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "bench_drone"
harness = false
